# CustomerAnalysisService

./: .gitignore  Test.py  config.py  handlers.py  kb.py  main.py  middleware.py  pyproject.toml  query_handlers.py  query_kb.py  requirements.txt  utils.py
src/data_fetchers/: admins.py  auth.py  bookmarks.py  histories.py  users.py
src/handlers/: __init__.py  admin_panel.py  analysis.py  handlers.py  query_handlers.py
src/keyboards/: kb.py  query_kb.py
src/websocket/: analysis.py  search.py
